Fix mockups in FF by having the bounding-box have an invisible fill.
Close #214.

Should come up with a better solution for #218 later.

--- a/examples/adam-mockup/mockup.css
+++ b/examples/adam-mockup/mockup.css
@@ -1,5 +1,7 @@
 .plottable .bounding-box {
   stroke: none;
+  fill: pink;
+  opacity: 0;
 }
 
 .plottable .axis line {
